<resources>
    <string name="app_name">RestaurantRezervation</string>


    <string name="logo_description">Reserved Logo</string>
    <string name="usernameEditTextHint">Email</string>
    <string name="passwordEditTextHint">Password</string>
    <string name="passwordConfirmationEditTextHint">Confirmation</string>
    <string name="emailEditTextHint">Email</string>
    <string name="loginButton">Log In</string>
    <string name="registerButton">Register</string>
    <string name="registerTextView">No account? Register here!</string>
    <string name="title_activity_restaurant_map">Map</string>


    <!-- permissions -->
    <string name="permission_rationale_location">Access to Location is required.</string>
    <string name="location_permission_denied">Location is required.</string>
    <string name="permission_required_toast">Location permission is required.</string>

    <!-- restaurant info -->
    <string name="restaurant_contact_text">Contact: </string>
    <string name="title_activity_shop">ShopActivity</string>

</resources>
