<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cpl.restaurantrezervation.activity.RegisterActivity"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/logo_margins"
            android:src="@drawable/reserved"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"/>


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margins"
            android:layout_below="@+id/logoImageView"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/input_padding"
            android:lines="1"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:hint="@string/emailEditTextHint"/>


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margins"
            android:layout_below="@+id/emailEditText"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/input_padding"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:hint="@string/passwordEditTextHint"/>

        <EditText
            android:id="@+id/passwordConfirmationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margins"
            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/input_padding"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:hint="@string/passwordConfirmationEditTextHint"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margins"
            android:layout_below="@+id/passwordConfirmationEditText"
            android:padding="@dimen/input_padding"
            android:textAlignment="center"
            android:background="@color/loginButton"
            android:layout_centerHorizontal="true"
            android:text="@string/registerButton"/>


    </RelativeLayout>
</ScrollView>
